[tool.poetry]
name = "pypuppetdb"
version = "3.2.0"
description = "Library for working with the PuppetDB REST API."
authors = ["Vox Pupuli <voxpupuli@groups.io>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/voxpupuli/pypuppetdb"
keywords = ["puppet", "puppetdb"]
classifiers = [
          "Development Status :: 5 - Production/Stable",
          "Intended Audience :: Developers",
          "Natural Language :: English",
          "License :: OSI Approved :: Apache Software License",
          "Operating System :: POSIX",
          "Topic :: Software Development :: Libraries",
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"


[tool.poetry.group.test.dependencies]
bandit = "^1.8.0"
coverage = "^7.6.9"
flake8 = "^7.1.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-flake8 = "^1.3.0"
pytest-mypy = "^0.10.3"
mypy = "^1.13.0"
cov-core = "^1.15.0"
httpretty = "^1.1.4"


[tool.poetry.group.docs.dependencies]
alabaster = "^0.7"
babel = "^2.16.0"
certifi = "^2024.8.30"
requests = "^2.32.3"
sphinx = "^7"
sphinx-rtd-theme = "^3.0.2"
sphinxcontrib-applehelp = "^2.0.0"
sphinxcontrib-devhelp = "^2.0.0"
sphinxcontrib-htmlhelp = "^2.1.0"
sphinxcontrib-jsmath = "^1.0.1"
sphinxcontrib-qthelp = "^2.0.0"
sphinxcontrib-serializinghtml = "^2.0.0"
pytz = ">=2024.2,<2026.0"
pyparsing = "^3.2.0"
pygments = "^2.18.0"
idna = "^3.10"
docutils = "^0.21.2"
snowballstemmer = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
